@@ -176,5 +176,7 @@
 
 20070109: Added an exchange field to charts.
 
+20070111: Fixed bug #1633007 - Yahoo Quotes, Error after add new Stock.
+
 
 
